23 Jan 2018
add: isbn field to edit.php
update: fix get correct isbn 10/13
update: minified js/css files
update: add anonymizer_url to imdb cast and trailer links
update: update categories
update: apis will set poster to api poster, if poster unset, without page refresh
update: book uniformity
update: tvmaze uniformity
update: details.php youtube display highest quality video available
update: imdb info
remove: unused beep.mp3 and beep.ogg
fix: incorrect var name for newsrss enable/disable
replace: imdb class with imdbphp class via composer
update: resetpw to use token auth

22 Jan 2018
update: comment.php

21 Jan 2018
update: trivia questions
fix: undefined vars in staffpanel.php
remove: log queries from staff panel
fix: anonymous username in popups
remove: log queries
update: adminer.php 4.4.0
update: check if vaiable is set before counting
update: missing expire time in site_config
update: details.php
merge: userstatus_ and user_status_ caches
update: snatched_staff.php remove duplicated text
fix: show/hide userdetails torrent blocks, should be closed at start
remove: redundant cache user_stats_
remove: redundant cache userstats_
fix: undefined var in news block
fix: incorrect sql erro log path
fix: countables
update: signup errors redirect, previous form data intact
update: install info
add: apikey for future api access
update: torrent_pass, auth to 64 characters
update: tables.css to work same with table inside table
fix: userdetails table blocks

20 Jan 2018
update: install tooltips

19 Jan 2018
update: set file permissions of .env, config.php and ann_config.php during install
update: installer check writeable root
update: user_unlocks.php to same style as the other block pages
add: option to disable/enable newsrss feeds
add: missing admin 'Show Friends' block

18 Jan 2018
fix: edit wiki article
fix: logout salt
fix: blackjack
update: index news block
update: wiki.php

17 Jan 2018
remove: double page load details.php just to increment hits