@@ -1,3 +1,6 @@
+24 Jan 2018
+update: blackjack better appearance for mobile
+
 23 Jan 2018
 add: isbn field to edit.php
 update: fix get correct isbn 10/13
